--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,9 @@ nav {
 }
 
 .about-intro-container {
+    opacity: 0.4;
+    scale: 0.7;
+    filter: blur(10px);
     padding-top: 50px;
     display: flex;
     flex-direction: row;
