--- a/styles.css
+++ b/styles.css
@@ -239,16 +239,6 @@ nav {
 .about-sec {
     z-index: 1;
 }
-
-.about-head {
-    margin: 10px;
-    text-align: center;
-    color: white;
-    font-size: 2.5rem;
-    text-decoration: underline;
-    text-underline-offset: 15px;
-}
-
 .about-intro-para {
     color: white;
     width: 35%;
@@ -423,11 +413,16 @@ footer {
 }
 
 .about-head {
+    background: linear-gradient(135deg);
     color: #fff;
-    /* White text color */
     text-align: center;
     margin-bottom: 40px;
-    /* Spacing below heading */
+    margin: 10px;
+    text-align: center;
+    color: white;
+    font-size: 2.5rem;
+    text-decoration: underline;
+    text-underline-offset: 15px;
 }
 
 /* Grid for project cards */
