--- a/Projects/TicTacToe/styles.css
+++ b/Projects/TicTacToe/styles.css
@@ -9,6 +9,7 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    background: linear-gradient(135deg, lavender, #d052f7);
 }
 
 body {
@@ -36,7 +37,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: background 0.3s ease, box-shadow 0.3s ease;
+    transition: all 0.3 ease-in-out, box-shadow 0.3s ease;
 }
 
 .dropdown-button:hover {
