--- a/Projects/TicTacToe/styles.css
+++ b/Projects/TicTacToe/styles.css
@@ -7,13 +7,19 @@
     margin: 0;
     padding: 0;
 }
-
+@keyframes duelToSolo {
+    to{
+        backdrop-filter: brightness(0.6) saturate(1.3);
+    }
+}
 
 body {
+    height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     background: linear-gradient(135deg, lavender, #d052f7);
+    transition: backdrop-filter 0.4s;
 }
 .dropdown {
     margin-left: auto;
@@ -111,7 +117,7 @@ body {
 }
 
 .title {
-    margin-top: 20px;
+    padding-top: 20px;
     margin-bottom: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
