--- a/styles.css
+++ b/styles.css
@@ -442,7 +442,8 @@ footer {
 
 /* Styles for individual project cards */
 .project-card {
-    width: 90%;
+    width: 100%;
+    height: 100%;
     padding: 5% 5%;
     border-radius: 15px;
     /* Match border radius */
@@ -457,6 +458,8 @@ footer {
 .project-link{
     text-decoration: none;
     color: inherit;
+    height: 100%;
+    width: 100%;
 }
 .project-card:hover {
     transform: translatey(-5px);
